Fixed css issue where the modal windows were not fully displayed when they got too long.

--- a/client/bo/dashboard.css
+++ b/client/bo/dashboard.css
@@ -98,7 +98,8 @@ textarea {
 
 }
 .modal-body{
-  max-height:600px !important;
+  /**max-height:600px !important;*/
+    overflow-y: auto;
 }
 .modal-footer{
     -moz-box-shadow:none;
